css/main.css
@import url(http://fonts.googleapis.com/css?family=Maven+Pro:400,700);

html, body {
margin:0;
padding:0;
height:100%;
}

*, *:before, *:after {
margin: 0;
-moz-box-sizing: border-box;
-webkit-box-sizing: border-box;
box-sizing: border-box;
}
body {
	margin:0px;
}

fa {
	color: #333;
}

h1, h2, h3, h4 {
font-family: 'Maven Pro', sans-serif;
padding: 20px 0;
}

a {
font-family: 'Maven Pro', sans-serif;
text-decoration:none;
}

a:hover {
color: #999;
}

a:active {
color: #AEDEE0;
}

a:visited {
color: none;
}

p {
font-family: 'Open Sans', sans-serif;
line-height: 200%;
}

hr {
border: none;
height:1px;
background-color:#999;
}

#wrapper {
min-height:100%;
position:relative;
}

.footer{
width:100%;
height:65px;
position:absolute;
bottom:0;
left:0;
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

/*Header */

.header {
box-shadow: 0px 1px 0px #999;
padding-bottom:10px;
}

.container {
padding-left:20px;
padding-right:20px;
}

.nav {
list-style-type: none;
display:table;
float: none;
font-family: 'Maven Pro', sans-serif;
font-weight: 700;
font-size: 15px;
text-transform:	uppercase;
}

ul.nav {
margin: 0 auto;
padding: 0;
}

.nav-link {
display: inline-block;
padding: 0 15px;
}

.nav-link a{
color: #333;
text-decoration:none;
}

.nav-link a:hover {
color: #999;
}

.socials a, .socials a:visited{
color: #333;
}

/*-----Content-------*/

.image-responsive {
height:auto;
width:100%;
padding-bottom:20px;
vertical-align:middle;
}

.splash-img-logo {
max-width:250px;
margin:0 auto;
}

.splash-img-logo-wide{
max-width:400px;
margin:0 auto;
}

.logo-top-margin {
display:block;
margin-top:100px;
}

.content {
color: #222;
padding-top: 10px;
padding-bottom:80px;
max-width:980px;
}

.content-header{ 
margin-top:5px;
margin-bottom:20px;
}

.content-header-line {
margin:0;
}

.content-projects {
max-width:750px;
margin:0 auto;
}

.content ul {
font-family: 'Open Sans', sans-serif;
font-style:italic;
line-height:150%;
list-style-type: none;
}

.resume h3 {
font-size: 18px;
text-transform: uppercase;
padding-bottom:10px;
}

.resume p {
font-size:14px;
}

.resume ul {
font-style:normal;  
list-style-type:circle;
padding-left:18px;
line-height:140%;
}
.resume ul li {
padding-bottom:12px;
}

.content p {
padding-bottom:20px

}

.project-title {
max-width:350px;
}

.project-subtitle {
float:left;
margin-top:-30px;
line-height:20px;
min-width:400px;
max-width:450px;
font-family: 'Open Sans', sans-serif;
font-size:10pt;
}

.project-subtitle a {
font-size:1.2em;
text-transform:uppercase;
font-weight:bold;
color:#2BC0F1;
}

a.back {
color: #333;
font-weight: 700;
text-transform:	uppercase;
padding-bottom:10px;
}

a.back:hover {
color:#999;
}

.splash {
width:100%;
}

.project-wrapper {
display:block;
max-width:750px;
height:400px;
margin-top:20px;
}

.project{
display:block;
content: "";
background-repeat: no-repeat;
background-position: 50%;
background-size: 70%;
width:100%;
height:100%;
overflow: hidden;
}

.show {
visibility:visible!important;
transition:opacity 0.5s linear;
}


.title {
visibility:hidden;
opacity:1;
font-size: 35px;
font-weight: 700;
text-transform:uppercase;
position:relative;
bottom:70%;
display:table;
float: none;
text-align:center;
overflow: auto;
margin: auto;
z-index:5;
width:100%;
color: #333;
background-color:rgba(255,255,255,0.8);
}

.fade {
opacity: .5;
transition: opacity .25s ease-in-out;
}


/*-----Gallery-------*/
.gallery {
width:100%;
margin: 0 auto;
display:table;
float: none;
}

.thumbnail {
transition: opacity 0.2s ease;
opacity: 1;
}

.thumbnail:hover {
opacity: .6;
}


/*------Footer------*/

.footer {
background-color:#111;
color: #AEDEE0;
text-transform: uppercase;
font-family: 'Maven Pro', sans-serif;
text-align:center;
font-size: 14px;
padding: 25px;
}
.footer a {
color: #AEDEE0;
text-decoration:none;
}

@media screen and (min-width: 280px) {

a.back {
margin-top:0px;
padding:0px 0 30px 0;
float:left;
display:block;
}

.socials, .splash{
display:none;
}

.logo  {
padding: 20px 0;
}

.logo img {
display: table;
float: none;
margin: 0 auto;
height:auto;
max-width:150px;
}

.logo-large {
display:none;
}

.thumbnail {
display:inline-block;
max-width:50%;
}

.thumbnail img {
padding: 10px;
}

.project-subtitle {
float:left;
margin-top:-30px;
line-height:20px;
min-width:400px;
max-width:450px;
font-family: 'Open Sans', sans-serif;
font-weight:normal;
font-size:10pt;
}

.content-header {
text-align:center;
}

.content {
padding-left:20px;
padding-right:20px;
}

.content h2 {
text-transform:uppercase;
}

.about-profile {
max-width:90%;
margin: 0 auto;
}

}

@media screen and (min-width: 480px) {

.logo  {
padding: 20px 0;
}

.content {
margin-left:auto;
margin-right:auto;
}

.thumbnail {
max-width:32.33%;
}

}

@media screen and (min-width: 768px) {

a.back {
float:right;
padding:28px 0;
}
.header {
padding-bottom:0px;
}

.splash {
display: initial;
}

ul.nav {
margin: 0 auto 4px 20px;
text-align:left;
}
.logo  {
padding: 20px 0 20px 20px;
display:inline-block;
max-width:350px;
}

.logo a {
text-align:right;
}

.logo img {
width:120px;
margin: 0;
}

.logo-small {
display:none;
}

.logo-large {
display:initial;
}

.nav{
display:table;
position:relative;
top:-20px;
text-align:left;
}

.nav-bar {
width:60%;
display: inline-block;
margin: 0 auto;
}

.socials {
margin-right:20px;
margin-left:auto;
display:inline-block;
position:absolute;
top:20px;
right:10px;
font-size: 18px;
}

.socials i {
padding:5px 5px 2px;
margin: 0 2px;
}

.socials i:hover {
color: #2BC0F1;
border-bottom: 1px solid #2BC0F1;
}

.content {
padding:0;
}

.project-wrapper{
display:inline-block;
width:49%;
}

.project {
background-size:100%;
}

.gallery {
padding:2em 0;
}

.thumbnail {
max-width:24%;
margin:1.5em 0;
}

.about-profile {
max-width:700px !important;
}
    
.one-half {
width:50%;
display:block;
float:left;
padding:0 10px;
}

.one-third {
width:33.33%;
display:block;
float:left;
padding:10px;
}    

}

